--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "typescript": "^4.7.4"
     },
     "cypress-cucumber-preprocessor": {
-        "nonGlobalStepDefinitions": true,
-        "stepDefinitions": "cypress/e2e/login/login_steps.ts"
+        "nonGlobalStepDefinitions": false,
+        "stepDefinitions":"cypress/e2e"
     },
     "scripts": {
         "test": "cypress run --headed"
